--- a/.github/workflows/build-kodbox.yaml
+++ b/.github/workflows/build-kodbox.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile
+          file: ./kodbox/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: sky94520/kodbox:${{github.run_number}}
