--- a/kodbox/Dockerfile
+++ b/kodbox/Dockerfile
@@ -1,3 +1,3 @@
 FROM kodcloud/kodbox:v1.4505
-COPY kodbox/define.php config/define.php
-COPY kodbox/setting_user.php config/setting_user.php
+COPY kodbox/define.php config
+COPY kodbox/setting_user.php config
