--- a/kodbox/kodbox.yaml
+++ b/kodbox/kodbox.yaml
@@ -1,16 +1,20 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Service
 metadata:
-  name: kodbox-config
+  name: kodbox-svc
   namespace: default
-data:
-  define.php: |
-    define('HOST', 'https://sky94520-kodbox.cpolar.top/');
-  setting_user.php: |
-    $config['settings']['staticPath'] = "https://static.kodcloud.com/kod/static/last/";
+spec:
+  clusterIP: None
+  ports:
+    - port: 80
+      targetPort: 80
+      protocol: TCP
+      name: http
+  selector:
+    app: kodbox-svc
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: kodbox
   namespace: default
@@ -18,39 +22,54 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kodbox
+      app: kodbox-svc
   template:
     metadata:
       labels:
-        app: kodbox
+        app: kodbox-svc
     spec:
+      initContainers:
+      - name: volume-mount-hack
+        image: busybox
+        command: ["sh", "-c", "chmod -f -R 777 /var/www/html"]
+        volumeMounts:
+        - name: kodbox-data
+          mountPath: /var/www/html
       containers:
         - name: kodbox
           image: kodcloud/kodbox:v1.4505
+          command:
+          - "/bin/sh"
+          - "-c"
+          - |
+            if [ -d "/var/www/html/config" ]; then
+              echo "config exist, use old config"
+            else
+              /entrypoint.sh
+            fi
+            /usr/bin/supervisord -n -c /etc/supervisord.conf
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
+          securityContext:
+            privileged: true
           volumeMounts:
-            - name: config
-              mountPath: /var/www/html/config/define.php
-              subPath: /var/www/html/config/define.php
-            - name: config
-              mountPath: /var/www/html/config/setting_user.php
-              subPath: /var/www/html/config/setting_user.php
-      volumes:
-        - name: config
-          configMap:
-            name: kodbox-config
-            items:
-              - key: define.php
-                path: var/www/html/config/define.php
-              - key: setting_user.php
-                path: var/www/html/config/setting_user.php
+            - name: kodbox-data
+              mountPath: /var/www/html
+  volumeClaimTemplates:
+  - metadata:
+      name: kodbox-data
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: nfs
+      resources:
+        requests:
+          storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kodbox-svc
+  name: kodbox-nodeport-svc
   namespace: default
 spec:
   type: NodePort
@@ -61,24 +80,3 @@ spec:
       name: http
   selector:
     app: kodbox
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: kodbox-ingress
-spec:
-  tls:
-    - hosts:
-        - kodbox.sky.com
-      secretName: kodbox-secret
-  rules:
-    - host: kodbox.sky.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: kodbox-svc
-                port:
-                  number: 80
